[tool.poetry]
name = "adsp"
version = "0.1.1"
description = "Awesome Data Science Package"
authors = ["Prashant Patel <prashant.patel@gmx.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/dimension23/adsp"
homepage = "https://github.com/dimension23/adsp"
keywords = ["data science", "awesome"]

[tool.poetry.dependencies]
python = "^3.7"
spacy = "^3.0.0"
contractions = "^0.0.48"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
